--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>Refugee journey</title>
     <meta charset="utf-8">
-    <link type="text/css" rel="stylesheet" href="css/main.css" />
+    <link type="text/css" rel="stylesheet" href="@@path/css/main.css" />
 </head>
 <body>
 
@@ -11,7 +11,7 @@
 
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 
-<!-- build:js js/refugee-journey.min.js -->
+<!-- build:js(src/) @@path/js/refugee-journey.min.js -->
 <script src="js/libs/mustache.js"></script>
 <script src="js/app/html.js"></script>
 <script src="js/app/testimonies.js"></script>
