Broke out content from data.js into html files

--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
 <!-- build:js(src/) @@version/js/refugee-journey.min.js -->
 <script src="js/libs/mustache.js"></script>
 <script src="js/app/html.js"></script>
-<script src="js/app/testimonies.js"></script>
+<script src="js/app/content.js"></script>
 <script src="js/app/data.js"></script>
 <script src="js/app/main.js"></script>
 <!-- endbuild -->
